force-app/main/default/objects/Account/fields/Biggest_win__c.field-meta.xml
<CustomField>
    <fullName>Biggest_win__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biggest win</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>