force-app/main/default/objects/Account/fields/Days_since_last_deployment__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_deployment__c</fullName>
    <description>Number of days that passed since last deployment</description>
    <label>Days since last deployment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>