force-app/main/default/objects/Account/fields/This_is_new__c.field-meta.xml
<CustomField>
    <fullName>This_is_new__c</fullName>
    <description>Checking if retrieve only is working</description>
    <label>This is new</label>
    <length>18</length>
    <type>Text</type>
</CustomField>