force-app/main/default/objects/Account/fields/Unit_tests_ran__c.field-meta.xml
<CustomField>
    <fullName>Unit_tests_ran__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit tests ran</label>
    <type>Checkbox</type>
</CustomField>